--- a/Lib1/Lib1.csproj
+++ b/Lib1/Lib1.csproj
@@ -44,9 +44,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Serialization.cs" />
     <Compile Include="ServiceClass.cs" />
     <Compile Include="DataClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tester.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Tech\Tech.csproj">
